Added the developers section to the pom.xml and added the Maven Surefire plugin.